# docHandler4AISDK

./: .gitignore  pyproject.toml  setup.py  test.py
docHandler4AISDK/: __init__.py  client.py  pdf.py
docHandler4AISDK.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
