[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docHandler4AISDK"
version = "0.0.1"
description = "SDK for docHandler4AI"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name="Mohamed Hasnaoui" }
]

dependencies = [
    "httpx"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]